# inotify-cpp

./: CMakeLists.txt  README.md
example/: CMakeLists.txt
src/: CMakeLists.txt  Event.cpp  FileSystemEvent.cpp  Inotify.cpp
src/include/inotify-cpp/: Event.h  FileSystemAdapter.h  FileSystemEvent.h  Inotify.h  NotifierBuilder.h
test/: CMakeLists.txt
test/unit/: CMakeLists.txt  NotifierBuilderTests.cpp
